<resources>
    <string name="app_name">WorldChef</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register_gender">Gender: </string>
    <string name="register_notice">Don\'t have an acccount?</string>
    <string name="register">REGISTER NOW!</string>
    <string name="register_email">Email</string>
    <string name="register_fname">First Name</string>
    <string name="register_lname">Last Name</string>
    <string name="register_cpass">Confirm Password</string>
    <string name="register_button_txt">Register</string>


    <string name="quiz_title">World Chef Quiz</string>
    <string name="quiz_categories">Choose Category</string>
    <string name="quiz_button">Start Quiz</string>
    <string name="quiz_score">Score: 0</string>
    <string name="quiz_question_count">Question: 1/Total</string>
    <string name="quiz_countdown">00:30</string>
    <string name="quiz_mc_options">Option xyzd</string>
    <string name="quiz_mc_questions">"Actual questions\n Actual question"</string>
    <string name="quiz_mc_button">Confirm answer</string>
    <string name="quiz_start_user_score">Total michelin stars: </string>
    <string name="quiz_start_instructions_title">Instructions</string>
    <string name="quiz_start_category_txt">Category: </string>
    <string name="quiz_start_instructions">Complete quizzes for any food category to collect Michelin stars!
    \n1. 10 stars to unlock \'Goat\' Category
    \n2. 20 stars to unlock \'Miscellaneous\' Category
    \n3. 30 stars to unlock \'Dessert\' Category</string>



    <string name="meal_country">Country of Origin</string>
    <string name="meal_category">Food Category</string>
    <string name="meal_ingredient">Ingredients</string>
    <string name="meal_instruction">Instructions</string>
    <string name="meal_youtube">Watch on Youtube</string>


    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>


    <string name="fav_title">My favourite recipes</string>
    <string name="fav_none">No Favourites</string>


    <string name="social_cooklevel">Current Cook level:</string>
    <string name="social_totalstars">Total Michelin Stars</string>
    <string name="social_leaderboard">LEADERBOARD</string>
    <string name="social_cookplayer">Username</string>
    <string-array name="Categories">
        <item>Beef</item>
        <item>Chicken</item>
        <item>Lamb</item>
        <item>Pasta</item>
        <item>Pork</item>
        <item>Seafood</item>
        <item>Sides</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Breakfast</item>
    </string-array>
</resources>
