<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quizscreenbackgroundnew"
    tools:context=".Activities.RegisterActivity">

    <ImageView
        android:id="@+id/register_square"
        android:layout_width="379dp"
        android:layout_height="525dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494"
        app:srcCompat="@drawable/longsquareshape" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/register_square"
        app:layout_constraintStart_toStartOf="@+id/register_square"
        app:layout_constraintTop_toTopOf="@+id/register_square" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/register_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/register_square"
        app:layout_constraintStart_toStartOf="@+id/register_square"
        app:layout_constraintTop_toBottomOf="@+id/register_gender_text" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/register_square"
        app:layout_constraintStart_toStartOf="@+id/register_square"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <EditText
        android:id="@+id/register_confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/register_cpass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/register_square"
        app:layout_constraintStart_toStartOf="@+id/register_square"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="650dp"
        android:background="@drawable/registerbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/register_fname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/register_square"
        app:layout_constraintStart_toStartOf="@+id/register_square"
        app:layout_constraintTop_toBottomOf="@+id/register_username" />

    <EditText
        android:id="@+id/register_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/register_lname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/register_square"
        app:layout_constraintStart_toStartOf="@+id/register_square"
        app:layout_constraintTop_toBottomOf="@+id/register_firstname" />

    <TextView
        android:id="@+id/register_gender_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_gender"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/register_square"
        app:layout_constraintTop_toBottomOf="@+id/register_lastname" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintStart_toEndOf="@+id/register_gender_text"
        app:layout_constraintTop_toBottomOf="@+id/register_lastname">

        <Spinner
            android:id="@+id/register_gender_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>