<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/loginscreen"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/activity_main_login_button"
        android:layout_width="212dp"
        android:layout_height="46dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/loginbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />


    <ImageView
        android:id="@+id/loginuserimage"
        android:layout_width="310dp"
        android:layout_height="67dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="385dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginuser" />

    <ImageView
        android:id="@+id/loginpwimage"
        android:layout_width="310dp"
        android:layout_height="67dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginuserimage"
        app:srcCompat="@drawable/loginpw" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="10dp"
        android:ems="9"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginuserimage" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:ems="9"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginpwimage" />

    <TextView
        android:id="@+id/login_regotxtview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_notice"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_login_button" />

    <TextView
        android:id="@+id/login_register_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/login_regotxtview"
        app:layout_constraintTop_toBottomOf="@+id/activity_main_login_button" />


</androidx.constraintlayout.widget.ConstraintLayout>