<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/quizscreenbackgroundnew"
    tools:context=".Activities.QuizActivity">

    <ImageView
        android:id="@+id/squareshape"
        android:layout_width="370dp"
        android:layout_height="493dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/squareshape" />

    <ImageView
        android:id="@+id/social_profile_pic2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/squareshape"
        app:layout_constraintStart_toStartOf="@+id/squareshape"
        app:layout_constraintTop_toTopOf="@+id/squareshape"
        app:srcCompat="@drawable/defaultprofile" />

    <TextView
        android:id="@+id/social_username2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="User's name"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/squareshape"
        app:layout_constraintStart_toStartOf="@id/squareshape"
        app:layout_constraintTop_toBottomOf="@id/social_profile_pic2" />

    <Button
        android:id="@+id/quiz_start_button"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:background="@drawable/yellowroundbutton"
        android:text="@string/quiz_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/squareshape" />

    <TextView
        android:id="@+id/quiz_start_user_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/quiz_start_user_score"
        android:textColor="#CC402D"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/squareshape"
        app:layout_constraintStart_toStartOf="@+id/squareshape"
        app:layout_constraintTop_toBottomOf="@+id/social_username2" />

    <TextView
        android:id="@+id/quiz_start_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:text="@string/quiz_start_category_txt"
        android:textColor="#000000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/squareshape"
        app:layout_constraintHorizontal_bias="0.297"
        app:layout_constraintStart_toStartOf="@id/squareshape"
        app:layout_constraintTop_toBottomOf="@+id/quiz_start_user_score" />

    <TextView
        android:id="@+id/quiz_start_instructions"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/quiz_start_instructions"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@id/squareshape"
        app:layout_constraintStart_toStartOf="@id/squareshape"
        app:layout_constraintTop_toBottomOf="@+id/quiz_start_instructions_txt" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toEndOf="@+id/quiz_start_user_score"
        app:layout_constraintTop_toBottomOf="@+id/social_username2"
        app:srcCompat="@drawable/michelinstar" />

    <TextView
        android:id="@+id/quiztitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/quiz_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quiz_start_instructions_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="155dp"
        android:text="@string/quiz_start_instructions_title"
        android:textColor="#0C0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/squareshape"
        app:layout_constraintStart_toStartOf="@+id/squareshape"
        app:layout_constraintTop_toBottomOf="@+id/quiz_start_category_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/quiz_spinner_cv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintStart_toEndOf="@+id/quiz_start_category_text"
        app:layout_constraintTop_toBottomOf="@+id/quiz_start_user_score">

        <Spinner
            android:id="@+id/quiz_category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>